versioned_docs/version-2025.2.1/professor/olavo_henrique_vieira_veiga.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "Olavo Henrique Vieira Veiga",
  "base": "",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        
        {
          "subject": "Sociologia 4 - 238",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_1-4",
          "students": [
            "EIN2022"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Filosofia 4 - 223",
          "size": 1,
          "teachers": [
            "José Jurandir Pereira Junior",
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_1-4",
          "students": [
            "EIN2022"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        }
        ,
        {
          "subject": "Sociologia I - 2424",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_14-2",
          "students": [
            "COM2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": []
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Sociologia I - 2424",
          "size": 2,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_14-2",
          "students": [
            "COM2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Sociologia I - 1071",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
        ,
        {
          "subject": "Sociologia 2 - 189",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_15-2",
          "students": [
            "EIN2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Sociologia 3 - 212",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_11-2",
          "students": [
            "EIN2023"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Sociologia 1 - 146",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_6-2",
          "students": [
            "EIN2025"
          ],
          "time": "08:20 - 09:10",
          "color": ""
        },
        {
          "subject": "Sociologia I - 465",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_8-2",
          "students": [
            "AGO2025"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        },
        {
          "subject": "Sociologia I - 1071",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "sala_9-2",
          "students": [
            "IIW2025A"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
        ,
        {
          "subject": "Sociologia I - 465",
          "size": 1,
          "teachers": [
            "Olavo Henrique Vieira Veiga"
          ],
          "classroom": "Sala 8-2",
          "students": [
            "AGO2025"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# Olavo Henrique Vieira Veiga

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
